--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,8 @@ $medium: 35em;
 $large: 52em;
 $x-large: 60em;
 
+$navToggle: 46em;
+
 $breakpoints: (
     "small" "(max-width: 35em)",
     "medium" "(min-width: 35em)",
