--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -27,6 +27,7 @@
 "site/site__navigation",
 "site/site__features",
 "site/site__social-media",
+"site/site__image-bank",
 
 "page/page__title",
 
@@ -34,13 +35,15 @@
 "enhance/big-steps",
 "enhance/buttons",
 "enhance/date-tag",
-"enhance/off-canvas",
+"enhance/off-canvas2",
+"enhance/off-canvas--main",
+"enhance/parallax",
 "enhance/proof-points",
 "enhance/quotes",
 "enhance/search",
 "../../../rex/src/scss/enhance/svg-icons",
-"../../../rex/src/scss/responsive/feature",
+"enhance/slick",
+"enhance/carousel",
 // "enhance/image-hover" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_image-hover.scss
 "enhance/collapsible-block" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_collapsible-block.scss
-
 ;
