--- a/src/templates/pages/off.hbs
+++ b/src/templates/pages/off.hbs
@@ -3,150 +3,17 @@ title: OFF
 layout: default.hbs
 ---
 
-<div class="inner--content  margins-off">
+<div class="he">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sequi, in odit quas accusamus possimus labore eligendi esse, officiis nostrum, provident alias consectetur. Modi voluptatibus saepe, dolorem suscipit libero iure eum eos minima quia. Harum in debitis ad, laudantium non quaerat fuga aperiam distinctio inventore tenetur consequatur et suscipit provident natus eius qui alias incidunt! Rem tempora, accusantium exercitationem iste incidunt modi facere cumque autem perspiciatis molestiae quos aperiam illo deleniti atque ipsa aspernatur porro ab repellat non enim dolore delectus ex ut. Nemo, voluptates pariatur laboriosam dolores, unde optio autem id ea, aut reprehenderit expedita similique repellendus! Veniam repudiandae soluta voluptatum eos placeat culpa, enim rem doloribus sint tempora labore ipsum natus aliquid consequuntur praesentium in eligendi vel illum nulla iusto id. Id expedita deleniti eius illum rerum necessitatibus explicabo quisquam minus, aut velit nemo nulla, atque praesentium doloribus. Quos quasi temporibus nobis sed, natus doloribus nihil, inventore eaque reiciendis, rem molestiae hic placeat libero impedit dolore repellat ab. Alias optio laudantium, in eveniet mollitia magni eaque temporibus tempora, obcaecati facere laboriosam autem sapiente! Odio numquam saepe ipsa sit placeat, optio totam maiores dignissimos reiciendis cum vero aut quod blanditiis laudantium eos nobis alias accusantium maxime rerum, autem et praesentium! Accusantium dolores quas delectus nesciunt ut, sint quisquam suscipit nulla error inventore ad ab at debitis nihil cumque. Doloremque quis minima incidunt ex facere repudiandae asperiores, in provident architecto illum modi rem nulla at quisquam impedit accusamus non numquam vero odit, quia id ducimus. Cumque totam tempora laboriosam cupiditate velit obcaecati quasi recusandae, ullam laborum voluptatum dicta voluptas deleniti, vel voluptatem eligendi unde, necessitatibus fugit reprehenderit. Architecto sed, asperiores quos quas voluptas, dolorem eum maxime possimus. Quod officia porro nostrum autem maiores expedita est quam assumenda, minus ab tempora, eos. Est maiores quisquam tempora, vero qui, nesciunt incidunt nihil. Consectetur saepe laborum voluptatem. Aut corrupti nobis quasi, ipsum aperiam, veniam aliquid tempore sunt quia dolorem reiciendis sed voluptatem ducimus quos, ratione ad voluptates architecto fugit accusamus quae commodi iure facilis. Consectetur maiores, atque a autem enim! Unde ratione similique sunt id itaque molestias corporis iure perspiciatis explicabo quos ad reiciendis, voluptate odit nulla corrupti tempora a incidunt, aperiam sequi laborum eum quis hic, quae doloremque ducimus. Id, consequuntur rerum voluptatum quaerat perferendis commodi accusantium iure amet, laborum maiores dolore earum nobis inventore doloribus corrupti voluptatibus error nihil? Impedit autem iste voluptates, doloribus dolor nam, assumenda cumque voluptatem ut illum nostrum! Dolorum quos odit eligendi nihil minima aliquid reiciendis ullam iusto dolore repudiandae, nemo velit provident eveniet consequatur enim ducimus nulla ipsam adipisci atque quia, eos saepe suscipit ea fugit alias. Deserunt beatae necessitatibus blanditiis quidem saepe laborum consectetur alias accusamus temporibus ipsa. Fuga, sed rem corporis tempora accusantium quaerat. Quasi pariatur, sequi est facilis. Doloremque officiis nostrum esse quos quia, alias provident sint minus consequatur sit maiores laborum necessitatibus accusantium voluptatibus nam ut cum corporis rerum repellendus! Quidem repudiandae, sed placeat. Amet eligendi aut a, quam ab debitis. A aliquam eveniet deleniti tenetur eos, id aliquid consectetur magnam, fugiat.
+</div>
 
-    <div class="outer-wrap">
-        <div class="inner-wrap" id="js-inner-wrap">
+    
+<div class="parallax">
+    <div class="parallax_content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi nihil assumenda illum atque laboriosam debitis minus odit quam perspiciatis deleniti similique aliquid natus quod porro amet, sint eum, libero hic in repellendus officia vitae perferendis ipsam facere. Praesentium quos consectetur perferendis quidem quo, voluptate reprehenderit vitae voluptatem, dicta, eum accusamus atque consequatur, sapiente unde velit quam laboriosam dolores tempore commodi. Veniam, repellendus, fugiat? Nulla laboriosam illum iste eum cumque voluptates consectetur laudantium nostrum assumenda quae, ipsam ab odit vel quibusdam sed deleniti commodi, eos velit! Laborum aliquam tempore natus quam, rem nam iure ratione magnam, dolore harum alias temporibus necessitatibus.
+    </div>
+</div>
 
-            {{> site__navigation }}
-
-            {{> page__title }}
-
-            <div class="main">
-                <p>Bethel University is a top-ranked, evangelical Christian university based in St. Paul, Minnesota.</p>
-                <h2>Our Students</h2>
-                <p>With a total enrollment of 6,500 students, Bethel is the largest institution in the 13-member Christian College Consortium and among the top five in the 106-member Council for Christian Colleges and Universities. In recent years, our students have come from as many as 49 states and 23 countries, and have represented more than 65 Christian denominations.</p>
-                
-                <div class="event-feed-8922">
-                <div class="media-box  mv1">
-                    <span itemscope="itemscope" itemtype="http://schema.org/Event">
-                        <p class="events-date-tag">JAN<span>24</span>2015</p>
-                        <div class="media-box-body">
-                            <h2 class="h5"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></h2>
-                            <p><span itemprop="description">Explore majors andies to fulfilling careers.</span>
-                            </p>
-                        </div>
-                    </span>
-                </div>
-                <div class="media-box  mv1">
-                    <span itemscope="itemscope" itemtype="http://schema.org/Event">
-                        <p class="events-date-tag">JAN<span>24</span>2015</p>
-                        <div class="media-box-body">
-                            <h2 class="h5"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></h2>
-                            <p class="mb0">10 a.m.</p>
-                            <p><span itemprop="description">Explore majors and learn more about Bethel’s opportunities in health sciences that lead to fulfilling careers.</span>
-                            </p>
-                        </div>
-                    </span>
-                </div>
-                </div>
-
-                <h2>Our Campus</h2>
-                <p>The 110,000-square-foot Brushaber Commons (completed in March 2009) is the latest addition to our 245-acre lakeside campus in suburban Arden Hills, Minnesota, 20 minutes from downtown St. Paul and Minneapolis. The spacious, modern building houses a two-story dining center, a restaurant, coffee shop, expanded campus store, offices for student organizations, and a green roof.</p>
-                <h2>Religious Affiliation</h2>
-                <p>Bethel is sponsored by the churches of <a href="http://www.convergeworldwide.org/">Converge Worldwide</a>, although we serve students from more than 65 Christian denominations.</p>
-                <h2>Academics</h2>
-                <p>As a comprehensive liberal arts university including a seminary, we offer more than 100 different undergraduate and advanced degree programs through 4 different schools.</p>
-                <h3>College of Arts &amp; Sciences</h3>
-                <ul>
-                    <li><a href="http://cas.bethel.edu/academics/majors-minors">88 majors and 43 minors</a> in subjects as diverse and engaging as environmental studies, business, journalism, international relations, art, biochemistry/microbiology, athletic training, and engineering science</li>
-                    <li><a href="http://cas.bethel.edu/academics/preprofessional-programs/">11 pre-professional programs</a> in medicine, law, dentistry, veterinary science, physical therapy, pharmacy, and more</li>
-                    <li>Nearly 75% of our traditional undergrad students <a href="http://cas.bethel.edu/academics/study-abroad">study abroad</a> in more than 30 destinations</li>
-                </ul>
-                <h3>Graduate School</h3>
-                <ul>
-                    <li><a href="http://gs.bethel.edu/academics/masters/">11 master's degrees</a> including communication, education K-12, gerontology, business, nursing, organizational leadership, and more</li>
-                    <li>An <a href="http://gs.bethel.edu/academics/doctorate/educational-administration/">Ed.D. in Educational Leadership</a> with licensure options</li>
-                    <li><a href="http://gs.bethel.edu/academics/certificates/">Graduate certificate programs</a> in various education fields such as autism spectrum disorders, nursing education, and postsecondary teaching</li>
-                    <li>Graduate licenses in multiple education specialties including special education, reading, and worked-based learning</li>
-                </ul>
-                <h3>College of Adult &amp; Professional Studies</h3>
-                <ul>
-                    <li><a href="http://caps.bethel.edu/academics/bachelors/">Bachelor's degrees</a> in high-growth fields such as business management, communication studies, nursing (RN to B.S.), and organizational leadership</li>
-                    <li>An <a href="http://caps.bethel.edu/academics/associates/">associate degree</a> in general studies for first-time college students</li>
-                    <li><a href="http://caps.bethel.edu/academics/certificates/">Certificate program</a> in&nbsp; human resource management</li>
-                    <li><a href="http://caps.bethel.edu/locations/">Convenient locations</a> throughout the greater Twin Cities region</li>
-                </ul>
-                <h3>Bethel Seminary</h3>
-                <ul>
-                    <li><a href="http://seminary.bethel.edu/academics">Graduate programs</a> in dozens of theological, pastoral, and leadership concentrations</li>
-                    <li>SemPM, an evening seminary program for working adults</li>
-                    <li><a href="http://seminary.bethel.edu/academics/delivery-options/distance-learning">InMinistry distance learning program</a>, one of the most successful seminary distance learning programs in the country</li>
-                    <li><a href="http://www.bethel.edu/seminary/about/locations">Seminary locations</a> in St. Paul and San Diego</li>
-                </ul>
-                <h2>Athletics</h2>
-                <p>The <a href="http://athletics.bethel.edu">Bethel Royals</a> field 18 NCAA Division III varsity sports in the <a href="http://www.miac-online.org/">Minnesota Intercollegiate Athletic Conference (MIAC)</a>
-                </p>
-                <table border="0">
-                    <tbody>
-                        <tr>
-                            <td><strong>Men's Teams</strong>
-                            </td>
-                            <td><strong>Women's Teams</strong>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=baseball&amp;path=baseball">Baseball</a>
-                            </td>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=basketball2&amp;path=wbball">Basketball</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=basketball&amp;path=mbball">Basketball</a>
-                            </td>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=crosscountry2&amp;path=wcross">Cross Country</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=crosscountry&amp;path=mcross">Cross Country</a>
-                            </td>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=golf2&amp;path=wgolf">Golf</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=football&amp;path=football">Football</a>
-                            </td>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=hockey2&amp;path=whockey">Hockey</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=golf&amp;path=mgolf">Golf</a>
-                            </td>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=soccer2&amp;path=wsoc">Soccer</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=hockey&amp;path=mhockey">Hockey</a>
-                            </td>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=softball&amp;path=softball">Softball</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=soccer&amp;path=msoc">Soccer</a>
-                            </td>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=tennis2&amp;path=wten">Tennis</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=tennis&amp;path=mten">Tennis</a>
-                            </td>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=track2&amp;path=wtrack">Track and Field</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=track&amp;path=mtrack">Track and Field</a>
-                            </td>
-                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=volleyball&amp;path=wvball">Volleyball</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <h2>The Arts</h2>
-                <p>Bethel's musical, theatre, and visual arts are highly respected among Christian colleges. Our <a href="http://cas.bethel.edu/academics/departments/music/">music department</a> fields 11 vocal and instrumental performance groups - jazz, choir, symphony orchestra, even handbells-in the expansive <a href="http://www.bethel.edu/events/arts/venues/benson/index">Benson Great Hall</a>. Plus, our theatre students stage 4 plays annually in the hall or in the intimate Black Box Theatre.</p>
-                <p>We have two art galleries on campus which host exhibitions showcasing the work of nationally and internationally established artists as well as artists in our local communities.</p>
-                <p>Additionally, the Twin Cities' arts community provides opportunities to experience culture firsthand or engage professionally with the arts through internships.</p>
-            </div>
-
-        </div><!--/#inner-wrap-->
-    </div><!--/#outer-wrap-->
+<div class="derer">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eligendi nobis, distinctio veniam vel rem, sequi officiis unde officia nam dolores dolor eum autem, praesentium aspernatur obcaecati nulla culpa nihil. Adipisci enim dolorum suscipit eius modi repudiandae. Quis a labore repellat, earum soluta tempore porro et aspernatur quia doloremque cumque hic dolores deleniti ratione aliquid praesentium perferendis alias. Nulla voluptas perferendis adipisci velit vel, dolores labore alias, exercitationem, id odit ut quidem expedita? Maiores ea praesentium cumque consectetur illo nulla. Mollitia magnam, accusamus in excepturi quaerat error animi, ab odit dolor reprehenderit maxime odio quia architecto obcaecati omnis! Corporis recusandae eaque quia ratione? Officia vitae dolore porro alias sit, blanditiis quasi corrupti iure hic. At dolorum, provident earum tempora vitae totam necessitatibus dolore, natus quae nesciunt recusandae. Error nulla sequi rem ducimus, explicabo voluptatibus nisi quibusdam autem dicta nobis vero sint aspernatur laudantium, beatae rerum, cumque vitae. Rerum fugit modi tempore assumenda consequuntur, temporibus cupiditate deserunt beatae architecto, ad aspernatur atque a autem voluptate sapiente officia excepturi? Ab doloribus, numquam vero iusto sit a explicabo expedita, distinctio laudantium, optio placeat, autem maiores nostrum neque. Recusandae doloremque, totam natus molestias vel aperiam eum labore, magni beatae hic alias, id molestiae numquam.
 </div>
