--- a/src/templates/partials/carousel.hbs
+++ b/src/templates/partials/carousel.hbs
@@ -1,70 +1,21 @@
-
-
-<style>
-.slick-item {
-    position: relative;
-    height: auto;
-}
-.slick-next:before {
-    content: '»';
-}
-.slick-prev:before {
-    content: '«';
-}
-.slick-next,.slick-prev {
-    background: tomato;
-}
-.slick-next:hover,.slick-prev:hover{
-    opacity: 1;
-    background: tomato;
-}
-.slick-next {
-    right: 0;
-}
-.slick-prev {
-    left: 0;
-}
-</style>
-
-<div class="slick-carousel  carousel--basic">
-	<div class="slick-item">
-	<a class="" href="http://www.bethel.edu/stories/marina-hannus">
-                                            
-    
-        
-        <img src="//cdn2.bethel.edu/resize/unsafe/1100x0/smart/http://www.bethel.edu/stories/images/profile-hannus-home.jpg" class="feature__img image-replace" alt="$imgDesc" data-src="//cdn2.bethel.edu/resize/unsafe/{width}x0/smart/http://www.bethel.edu/stories/images/profile-hannus-home.jpg" width="1100">
-                         <figure class="feature__figure">
-                        <blockquote class="feature__blockquote">There are so many people here that I’ve connected to really quickly.</blockquote>
-                        <figcaption class="feature__figcaption">Seminary student Marina Hannus on theology, community, and her transition from Sweden to Bethel.</figcaption>
-                    </figure>
-                
-    </a>
+<div class="slick-carousel  carousel--overlay">
+    <div class="slick-item">
+        <a href="http://bethel.edu/stories/patrick-keefe" title="">
+            <img class="feature__img" src="https://cdn2.bethel.edu/resize/unsafe/1500x0/smart/http://www.bethel.edu/stories/images/profile-keefe-home.jpg" style="opacity: 1;" title="">
+            <figure class="feature__figure">
+                <blockquote class="feature__blockquote">I find meaning in my work every day.</blockquote>
+                <figcaption class="feature__figcaption">Patrick Keefe, CFO of the Greater Minnesota Housing Fund, on lifelong learning as an executive.</figcaption>
+            </figure>
+        </a>
     </div>
     <div class="slick-item">
-    <a class="" href="http://www.bethel.edu/stories/marina-hannus">
-                                        
-    
-        
-        <img src="//cdn2.bethel.edu/resize/unsafe/1100x0/smart/http://www.bethel.edu/stories/images/profile-keefe-home.jpg" class="feature__img image-replace" alt="$imgDesc" data-src="//cdn2.bethel.edu/resize/unsafe/{width}x0/smart/http://www.bethel.edu/stories/images/profile-keefe-home.jpg" width="1100">
-                         <figure class="feature__figure">
-                        <blockquote class="feature__blockquote">There are so many people here that I’ve connected to really quickly.</blockquote>
-                        <figcaption class="feature__figcaption">Seminary student Marina Hannus on theology, community, and her transition from Sweden to Bethel.</figcaption>
-                    </figure>
-                
-    </a>
-    </div>
-        <div class="slick-item">
-    <a class="" href="http://www.bethel.edu/stories/marina-hannus">
-                                            
-    
-        
-        <img src="//cdn2.bethel.edu/resize/unsafe/1100x0/smart/http://www.bethel.edu/stories/images/profile-masten-home.jpg" class="feature__img image-replace" alt="$imgDesc" data-src="//cdn2.bethel.edu/resize/unsafe/{width}x0/smart/http://www.bethel.edu/stories/images/profile-masten-home.jpg" width="1100">
-                         <figure class="feature__figure">
-                        <blockquote class="feature__blockquote">There are so many people here that I’ve connected to really quickly.</blockquote>
-                        <figcaption class="feature__figcaption">Seminary student Marina Hannus on theology, community, and her transition from Sweden to Bethel.</figcaption>
-                    </figure>
-                
-    </a>
+        <a href="http://bethel.edu/stories/matthew-kirk" title="">
+            <img class="feature__img" src="https://cdn2.bethel.edu/resize/unsafe/1500x0/smart/http://www.bethel.edu/stories/images/profile-kirk-home.jpg" title="" style="opacity: 1;">
+            <figure class="feature__figure">
+                <blockquote class="feature__blockquote">No matter where you go or who you talk to at Bethel, everyone encourages you to keep going.</blockquote>
+                <figcaption class="feature__figcaption">Alum Matthew Kirk ‘14 shares his Bethel story.</figcaption>
+            </figure>
+        </a>
+
     </div>
 </div>
-
