--- a/src/scss/global/_header.scss
+++ b/src/scss/global/_header.scss
@@ -2,82 +2,26 @@
     background: lighten(#0f2c52,2%);
     position: relative;
     // margin-top: 0;
-    padding: 2em 0;
+    padding: 1em 0;
+    width: 100%;
 }
 
 .global__header .inner {
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 }
 .global__logo {
     width: 9em;
     // margin: .5em 1em .25em 1em;
     
-    @include respond-min(60em){ 
+    @include respond-min($navToggle){ 
         padding: .5em 0;
         width: 11em;
     }
 }
 .global__logo a { 
-    display: block }
-
-.quick-links {
-    font-family: $gotham;
-    // display: none;
-    position: relative;
-
-    @include respond-min(60em){
-        display: flex;
-        align-items: center;
-    }
-
-    a {
-        color: lighten($bethel--blue, 15%);
-        padding: 0 .5em;
-        font-size: .8rem;
-    }
-
-    .svg-icon {
-        width: .7em;
-        height: .7em;
-        margin: 0 .5em;
-        fill: lighten($bethel--blue, 15%);
-    }
-}
-
-.turtles {
-    // display: none;
-    // position: absolute;
-    // top: 0;
-    // right: 0;
-}
-
-
-.burger {
-    // font-size: 1rem;
-    // margin-left: 1.5em;
-}
-.burger {
-    background: #17437d;
-    padding: .25em .6em;
-    margin-right: 1em;
-    margin-top: 0;
-    font-family: $gotham;
-    font-size: .9rem;
-
-    @include respond-min(60em){
-      display: none;
-    }
-}
-.burger-icon {
-    content: "";
-    display: block;
-    width: 1em;
-    box-shadow: 0 6px 0 1px #fff,0 12px 0 1px #fff,0 18px 0 1px #fff;
-}
-.burger-text {
-    margin-left: 1.5em;
-    color: #fff;
+    display: block; 
 }
