--- a/src/scss/global/_navigation.scss
+++ b/src/scss/global/_navigation.scss
@@ -1,41 +1,83 @@
-.global__navigation {
-    // background: #133868;
-    background: $bethel--navy;
-    border-bottom: 1px solid #133868;
-    margin-top: 0;
+.big-global__navigation {
+    display: none;
 
-    ul {
-        list-style: none;
-        margin: 0;
-        padding: 1em 0;
+    @include respond-min($navToggle){
+        display: block;
+    }
 
-
-        @include respond-min(60em) {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap; 
+    li {
+        @include respond-min($navToggle){
+            font-family: $gotham;
+            display: inline-block;
+            // font-size: .9rem;
+            font-weight: 500;
+            // letter-spacing: .05em;
+            // text-transform: uppercase;
+        //     flex: 50%;
+            padding: 0 .5em;
         }
     }
 
+    a {
+        color: #fff;
+    }
+
+    a.active {
+        color: $bethel--yellow;
+    }
+}
+
+.global__navigation {
+    // background: #133868;
+    // background: $bethel--navy;
+    // border-bottom: 1px solid #133868;
+    // margin-top: 0;
+
+    display: block;
+
+    @include respond-min($navToggle){
+        display: none;
+    }
+
+    ul {
+        list-style: none;
+        margin: 4em 0 0;
+        padding: 1em 0;
+    //     display: flex;
+    //     justify-content: space-between;
+    //     align-items: center;
+    //     // align-content: center;
+    //     text-align: center;
+    //     flex-wrap: wrap;
+
+    //     @include respond-min(60em) {
+    //         display: flex;
+    //         justify-content: space-around;
+    //         // flex-wrap: nowrap; 
+    //     }
+    }
+
     ul li {
-        margin-top: 0;
-        font-family: $gotham;
-        font-size: .7em;
+    //     margin-top: 0;
+    //     font-family: $gotham;
+        font-size: .9rem;
         font-weight: 500;
-        letter-spacing: .1em;
+        letter-spacing: .05em;
         text-transform: uppercase;
-    }
+    //     flex: 50%;
+        padding: 0 0 .5em;
+    // }
 
-    ul li:first-child {
-        margin-left: -1em;
-    }
+    // ul li:first-child {
+    //     margin-left: -1em;
+    // }
 
-    ul li:last-child {
-        margin-right: -1em;
+    // ul li:last-child {
+    //     margin-right: -1em;
     }
 
     ul li a {
-        padding: .5em 1em;
+        // padding: 2em 0em;
         color: #fff;
     }
 
@@ -50,4 +92,38 @@
         vertical-align: text-top;
         fill: #fff;
     }
+}
+
+.quick-links {
+
+    @include respond-min($navToggle){
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.quick-links ul {
+    margin-bottom: 1em;
+    list-style: none;
+    font-size: .8rem;
+    margin-top: 0;
+    padding: 0;
+
+    @include respond-min($navToggle){
+        margin-bottom: 0;
+    }
+}
+
+.quick-links ul li {
+    padding: .2em 0em;
+
+    @include respond-min($navToggle){
+        display: inline-block;
+        padding: .2em .4em;
+    }
+}
+
+.quick-links li a {
+    color: lighten($bethel--blue,15%);
 }
