--- a/src/scss/page/_page__title.scss
+++ b/src/scss/page/_page__title.scss
@@ -1,10 +1,10 @@
 .page__title {
-	// margin-top: 2em;
+	// margin-top: 1.5em;
 	// margin-bottom: 1em;
 	padding: 0 1em;
 	flex-basis: 100%;
 
-	@include respond-min(46em){
+	@include respond-min($navToggle){
 		order: 1;
 		flex-shrink: 0;
 		padding: 0;
@@ -16,16 +16,16 @@
 	font-weight: 400;
 	font-size: 2.25rem;
 	// line-height: 1;
-	margin-top: 1rem;
+	margin-top: 0;
 	margin-bottom: 0;
 	// padding: 0;
 	// font-family: $sentinel;
 
-	@include respond-min(46em){
+	@include respond-min($navToggle){
 		font-size: 2.5rem;
 	}
 
 	@include respond-min(60em){
-		font-size: 2.75rem;
+		font-size: 3rem;
 	}
 }
