--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -2,38 +2,32 @@
 layout:default.hbs
 ---
 <!doctype html>
-<html class="no-js" lang="">
+<html class="" lang="">
 
 {{> head }}
 
-<body>
-{{!-- <a data-scroll href="#bazinga">Anchor Link</a> --}}
+<body class="no-js">
 
-{{> global__header }}
-{{!-- {{> global__navigation }} --}}
-{{> school__navigation }}
-{{> site__title }}
-{{!-- {{> page__title }} --}}
+	{{> global--school}}
 
-{{!-- <div class="inner--content"> --}}
-{{> body }}
-{{!-- </div> --}}
+	<div class="inner-wrap--global__navigation" id="js-inner-wrap--global__navigation">
 
-{{!-- <span id="bazinga">Bazinga!</span> --}}
+		{{> global__header }}
 
-{{> global__footer }}
+		{{> school__navigation }}
 
-{{!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.14/slick.min.js"></script> --}}
+		{{> site__feature }}
+		
+		{{> site__title }}
+
+		{{> body }}
+
+		{{> global__footer }}
+
+	</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="/js/bundle.js"></script>
 
-<script>
-// $(document).ready(function(){
-// 	$('.slick-carousel').slick({
-// 	  lazyLoad: 'ondemand',
-// 	});
-// });
-</script>
 </body>
 </html>
