--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -3,33 +3,156 @@ title: HOME
 layout: default.hbs
 ---
 
-<div class="grid  margins-off  mt0">
+<div class="inner--content  margins-off">
 
-<div class="grid-cell  main-content--with-nav">
-{{!-- <h2 class="collapsible-heading">Heading</h2> --}}
-{{!-- <div class="collapsible-block">
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-</div> --}}
-<p>John Alexis Edgren <strong>founded Bethel as a seminary</strong> in 1871, with the name Baptist Union Theological Seminary. The seminary trained pastors to serve Swedish Baptist immigrants, fleeing religious persecution in Europe. Edgren, a sea captain and scholar who knew 30 languages, founded Bethel on the enduring conviction that Christians ought to love God with their minds and represent Him in all fields.</p>
-<h2>Moving to a University</h2>
-<p>The Baptist General Conference (now Converge Worldwide) took on support of the seminary in 1914, moved it from Chicago to St. Paul, and merged it with a Christian high school. Following World War II, Bethel answered demand for four-year degrees, becoming Bethel College &amp; Seminary.</p>
-<p>Over the following decades, visionary leaders expanded Bethel Seminary to the West and East coasts, while growing the undergraduate program in St. Paul. In 1989, non-theological graduate programs were launched, followed by bachelor's degrees for working adults along with online learning options.</p>
-<p>In 2004, already classified among "master's level universities," Bethel changed its name to Bethel University to match its broad scope of programs across 4 schools:</p>
-<ul>
-<li><a href="http://cas.bethel.edu">College of Arts &amp; Sciences</a></li>
-<li><a href="http://caps.bethel.edu">College of Adult &amp; Professional Studies</a></li>
-<li><a href="http://gs.bethel.edu">Graduate School</a></li>
-<li><a href="http://seminary.bethel.edu">Bethel Seminary</a></li>
-</ul>
-<p>Bethel remains a private, Christian university, sponsored in part by the churches of Converge Worldwide, but open to all men and women willing to learn within an evangelical perspective and community.</p>
-<h2>Poised for the Future</h2>
-<p>In less than three decades, Bethel's programs have more than doubled to over 100 degree options, and enrollment has tripled to 6,000 students. But Bethel remains true to the vision of its founder, John Edgren: to develop broadly educated, critically thinking Christians-changing the world through service and leadership in Christ's name.</p>
-</div>
-<div class="grid-cell  main-content--flex">qui exercitationem, dolorem quam fuga! Velit culpa odio a perferendis optio eius quidem earum, obcaecati ipsa, corporis deserunt natus veniam accusamus laborum id ipsam molestias unde quibusdam saepe consequuntur libero quaerat, aspernatur magni. Omnis qui perspiciatis doloremque repellendus quisquam? Fugit maxime alias adipisci mollitia, dolorum quod illo culpa quidem neque aperiam, ad, temporibus numquam sint omnis corporis repellendus repellat ipsum dicta explicabo quisquam sequi minima eaque! Eos pariatur voluptatibus alias sint explicabo quaerat iste perspiciatis atque ipsam aspernatur ad nihil, dolor illum fuga aut hic eius repellendus? Iure cupiditate non, numquam veritatis voluptas! Nemo reiciendis, reprehenderit, iure eaque totam quam nulla tenetur dolores dolorem voluptatem autem! Natus eligendi sequi ratione facere modi incidunt fuga blanditiis quibusdam, aliquid labore voluptate recusandae vel ea, rem qui voluptates nostrum consequatur dignissimos eveniet, repellat laboriosam autem voluptatibus assumenda. Impedit at velit officiis mollitia placeat amet similique aspernatur voluptatum quisquam eum quia excepturi quo maiores, ratione repellendus? Suscipit consectetur eum accusantium eos, obcaecati a dolore ad vitae soluta nisi odit ex ut beatae, numquam itaque neque voluptates, praesentium nostrum nesciunt id sint? Iure aliquam eum, eligendi iste similique perspiciatis, dolores minima. Ipsa, modi, cupiditate. Voluptas quis recusandae maiores asperiores soluta adipisci enim beatae molestias nisi. Labore nesciunt itaque impedit vitae dicta fugit quis asperiores accusamus unde molestias tempora, autem debitis blanditiis. Aliquam molestias iusto, ad? Nesciunt minus, possimus fugit. Eum maxime nisi vitae, tempora officia iure porro, impedit nam ad culpa reprehenderit hic incidunt temporibus nulla sunt, quidem. Aut consequatur, necessitatibus nihil? Nulla nobis nisi quasi placeat ad illum porro recusandae ea accusamus, fuga magni. Deserunt reiciendis labore natus maxime, impedit voluptatibus odit quis porro, eveniet animi aliquam! Officia inventore ipsa, recusandae nobis obcaecati omnis! Necessitatibus repellat vitae eum iusto tempora mollitia fugiat veritatis delectus maiores nemo autem illum ut ipsa porro tenetur accusamus odit laudantium repudiandae, quisquam distinctio. Eum, ad iste temporibus illo voluptatum ipsum eveniet magni, maxime, ipsam in quis aliquam necessitatibus pariatur! Aperiam libero, adipisci amet optio omnis eius perspiciatis architecto assumenda velit asperiores dolorum a quia illo esse nostrum porro fugit quae dolores sint reprehenderit, eligendi vero reiciendis inventore quo. Iure ratione veniam minima magnam neque voluptates, quis quasi obcaecati alias eligendi nostrum aperiam repudiandae recusandae maxime fuga cupiditate, facere eaque porro, sed. Inventore blanditiis quia, facere, facilis quas est, iusto veniam aliquam magni placeat vero dolorum? Sunt saepe voluptate sint blanditiis sapiente nemo, dolor commodi, sed fuga a, ducimus esse nostrum! Quos pariatur magnam praesentium voluptatem, exercitationem at suscipit iusto, nemo temporibus eaque iure illum sint eum libero distinctio voluptates reprehenderit ea aliquid quia quae voluptas! Nisi eos delectus itaque magnam molestiae asperiores, vero provident culpa qui voluptate quo sequi laborum harum earum quaerat commodi, voluptas? Facere neque ullam voluptate quis ipsam nesciunt deleniti assumenda, quisquam tempora. Voluptates omnis accusamus itaque necessita
-</div>
-<div class="grid-cell  site__navigation"  role="navigation">
+    <div class="outer-wrap--site__navigation">
+        <div class="inner-wrap--site__navigation" id="js-inner-wrap--site__navigation">
 
-{{> site__navigation}}
+            {{> site__navigation }}
 
-</div>
+            {{> page__title }}
+
+
+
+
+            <div class="main">
+                
+                <p>Bethel University is a top-ranked, evangelical Christian university based in St. Paul, Minnesota.</p>
+                <h2>Our Students</h2>
+                <p>With a total enrollment of 6,500 students, Bethel is the largest institution in the 13-member Christian College Consortium and among the top five in the 106-member Council for Christian Colleges and Universities. In recent years, our students have come from as many as 49 states and 23 countries, and have represented more than 65 Christian denominations.</p>
+                
+                <div class="event-feed-8922">
+                <div class="media-box  mv1">
+                    <span itemscope="itemscope" itemtype="http://schema.org/Event">
+                        <p class="events-date-tag">JAN<span>24</span>2015</p>
+                        <div class="media-box-body">
+                            <h2 class="h5"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></h2>
+                            <p><span itemprop="description">Explore majors andies to fulfilling careers.</span>
+                            </p>
+                        </div>
+                    </span>
+                </div>
+                <div class="media-box  mv1">
+                    <span itemscope="itemscope" itemtype="http://schema.org/Event">
+                        <p class="events-date-tag">JAN<span>24</span>2015</p>
+                        <div class="media-box-body">
+                            <h2 class="h5"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></h2>
+                            <p class="mb0">10 a.m.</p>
+                            <p><span itemprop="description">Explore majors and learn more about Bethel’s opportunities in health sciences that lead to fulfilling careers.</span>
+                            </p>
+                        </div>
+                    </span>
+                </div>
+                </div>
+
+                <h2>Our Campus</h2>
+                <p>The 110,000-square-foot Brushaber Commons (completed in March 2009) is the latest addition to our 245-acre lakeside campus in suburban Arden Hills, Minnesota, 20 minutes from downtown St. Paul and Minneapolis. The spacious, modern building houses a two-story dining center, a restaurant, coffee shop, expanded campus store, offices for student organizations, and a green roof.</p>
+                <h2>Religious Affiliation</h2>
+                <p>Bethel is sponsored by the churches of <a href="http://www.convergeworldwide.org/">Converge Worldwide</a>, although we serve students from more than 65 Christian denominations.</p>
+                <h2>Academics</h2>
+                <p>As a comprehensive liberal arts university including a seminary, we offer more than 100 different undergraduate and advanced degree programs through 4 different schools.</p>
+                <h3>College of Arts &amp; Sciences</h3>
+                <ul>
+                    <li><a href="http://cas.bethel.edu/academics/majors-minors">88 majors and 43 minors</a> in subjects as diverse and engaging as environmental studies, business, journalism, international relations, art, biochemistry/microbiology, athletic training, and engineering science</li>
+                    <li><a href="http://cas.bethel.edu/academics/preprofessional-programs/">11 pre-professional programs</a> in medicine, law, dentistry, veterinary science, physical therapy, pharmacy, and more</li>
+                    <li>Nearly 75% of our traditional undergrad students <a href="http://cas.bethel.edu/academics/study-abroad">study abroad</a> in more than 30 destinations</li>
+                </ul>
+                <h3>Graduate School</h3>
+                <ul>
+                    <li><a href="http://gs.bethel.edu/academics/masters/">11 master's degrees</a> including communication, education K-12, gerontology, business, nursing, organizational leadership, and more</li>
+                    <li>An <a href="http://gs.bethel.edu/academics/doctorate/educational-administration/">Ed.D. in Educational Leadership</a> with licensure options</li>
+                    <li><a href="http://gs.bethel.edu/academics/certificates/">Graduate certificate programs</a> in various education fields such as autism spectrum disorders, nursing education, and postsecondary teaching</li>
+                    <li>Graduate licenses in multiple education specialties including special education, reading, and worked-based learning</li>
+                </ul>
+                <h3>College of Adult &amp; Professional Studies</h3>
+                <ul>
+                    <li><a href="http://caps.bethel.edu/academics/bachelors/">Bachelor's degrees</a> in high-growth fields such as business management, communication studies, nursing (RN to B.S.), and organizational leadership</li>
+                    <li>An <a href="http://caps.bethel.edu/academics/associates/">associate degree</a> in general studies for first-time college students</li>
+                    <li><a href="http://caps.bethel.edu/academics/certificates/">Certificate program</a> in&nbsp; human resource management</li>
+                    <li><a href="http://caps.bethel.edu/locations/">Convenient locations</a> throughout the greater Twin Cities region</li>
+                </ul>
+                <h3>Bethel Seminary</h3>
+                <ul>
+                    <li><a href="http://seminary.bethel.edu/academics">Graduate programs</a> in dozens of theological, pastoral, and leadership concentrations</li>
+                    <li>SemPM, an evening seminary program for working adults</li>
+                    <li><a href="http://seminary.bethel.edu/academics/delivery-options/distance-learning">InMinistry distance learning program</a>, one of the most successful seminary distance learning programs in the country</li>
+                    <li><a href="http://www.bethel.edu/seminary/about/locations">Seminary locations</a> in St. Paul and San Diego</li>
+                </ul>
+                <h2>Athletics</h2>
+                <p>The <a href="http://athletics.bethel.edu">Bethel Royals</a> field 18 NCAA Division III varsity sports in the <a href="http://www.miac-online.org/">Minnesota Intercollegiate Athletic Conference (MIAC)</a>
+                </p>
+                <table border="0">
+                    <tbody>
+                        <tr>
+                            <td><strong>Men's Teams</strong>
+                            </td>
+                            <td><strong>Women's Teams</strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=baseball&amp;path=baseball">Baseball</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=basketball2&amp;path=wbball">Basketball</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=basketball&amp;path=mbball">Basketball</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=crosscountry2&amp;path=wcross">Cross Country</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=crosscountry&amp;path=mcross">Cross Country</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=golf2&amp;path=wgolf">Golf</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=football&amp;path=football">Football</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=hockey2&amp;path=whockey">Hockey</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=golf&amp;path=mgolf">Golf</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=soccer2&amp;path=wsoc">Soccer</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=hockey&amp;path=mhockey">Hockey</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=softball&amp;path=softball">Softball</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=soccer&amp;path=msoc">Soccer</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=tennis2&amp;path=wten">Tennis</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=tennis&amp;path=mten">Tennis</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=track2&amp;path=wtrack">Track and Field</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=track&amp;path=mtrack">Track and Field</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=volleyball&amp;path=wvball">Volleyball</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h2>The Arts</h2>
+                <p>Bethel's musical, theatre, and visual arts are highly respected among Christian colleges. Our <a href="http://cas.bethel.edu/academics/departments/music/">music department</a> fields 11 vocal and instrumental performance groups - jazz, choir, symphony orchestra, even handbells-in the expansive <a href="http://www.bethel.edu/events/arts/venues/benson/index">Benson Great Hall</a>. Plus, our theatre students stage 4 plays annually in the hall or in the intimate Black Box Theatre.</p>
+                <p>We have two art galleries on campus which host exhibitions showcasing the work of nationally and internationally established artists as well as artists in our local communities.</p>
+                <p>Additionally, the Twin Cities' arts community provides opportunities to experience culture firsthand or engage professionally with the arts through internships.</p>
+            </div>
+
+
+
+        </div><!--/#inner-wrap-->
+    </div><!--/#outer-wrap-->
 </div>
