--- a/src/templates/partials/global__header.hbs
+++ b/src/templates/partials/global__header.hbs
@@ -1,4 +1,28 @@
-<div class="global__header" role="banner">
+    <div class="global__header" role="banner">
+        <div class="inner">    
+            <div class="global__logo">
+                <a href="http://www.bethel.edu"><img alt="Bethel University" src="//cdn1.bethel.edu/dev/images/logo-white.png"/></a>
+            </div>
+
+            <nav class="big-global__navigation" role="navigation">
+                <ul>
+                     <li><a href="http://www.bethel.edu/academics/">Undergrad</a></li>
+                     <li><a class="active"  href="http://www.bethel.edu/admissions/">Adult Undergrad</a></li>
+                     <li><a href="http://cas.bethel.edu/student-life/">Graduate</a></li>
+                     <li><a href="http://www.bethel.edu/faith/">Seminary</a></li>
+                </ul>
+            </nav>
+
+
+            <a class="burger" href="#toolbox" id="js-globalNav-button">
+                <span class="burger-icon"></span>
+                <span class="burger-text">Menu</span>
+            </a>
+
+        </div>
+    </div>
+
+{{!-- <div class="global__header" role="banner">
     <div class="inner">
         <div class="global__logo">
             <a href="http://www.bethel.edu"><img alt="Bethel University" src="//cdn1.bethel.edu/dev/images/logo-white.png"/></a>
@@ -6,14 +30,14 @@
 
 
 
-{{!--         <form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
+        <form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
             <fieldset>
                 <input name="cx" type="hidden" value="017681067239267367526:chqo5ugqj90">
                 <input name="ie" type="hidden" value="UTF-8">
                 <input class="search-input" name="q" type="text">
                 <input class="btn search-go" name="sa" type="submit" value="Search">
             </fieldset>
-        </form> --}}
+        </form>
 
         <a class="burger" href="#toolbox" id="toolbox-open-btn">
             <span class="burger-icon"></span>
@@ -28,11 +52,11 @@
     <nav class="global__navigation" role="navigation">
         <div class="inner">
             <ul>
-{{!--                 <li><a href="http://www.bethel.edu">
+                <li><a href="http://www.bethel.edu">
                         <svg class="svg-icon  home-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home"></use></svg>
                         <span style="display:none">Home</span>
                     </a>
-                </li> --}}
+                </li>
                  <li class="active"> <a href="http://www.bethel.edu/about">About</a></li>
                  <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
                  <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
@@ -62,5 +86,5 @@
 	                <input class="btn search-go" name="sa" type="submit" value="Search">
 	            </fieldset>
 	        </form>
-	        {{!-- <svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg> --}}
-</div> 
+	        <svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg>
+</div>  --}}
