--- a/src/templates/partials/school__navigation.hbs
+++ b/src/templates/partials/school__navigation.hbs
@@ -4,9 +4,9 @@
 {{!--     	<li><a href="https://www.bethel.edu"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a></li> --}}
         {{!-- <li><a href="https://www.bethel.edu">Home</a></li> --}}
         <li><a href="/undergrad/about/" class="">About</a></li>
-        <li><a href="/undergrad/academics/index-new" class="">Academics</a></li>
+        <li><a href="/undergrad/academics/index-new" class="active">Academics</a></li>
         <li><a href="/undergrad/admissions/" class="">Admissions</a></li>
-        <li><a href="/undergrad/financial-aid/"  class="active">Tuition &amp; Financial Aid</a>{{!-- <a class="school__navigation__menu" href="#nav" data-scroll>☰ Menu</a> --}}</li>
+        <li><a href="/undergrad/financial-aid/"  class="">Tuition &amp; Financial Aid</a>{{!-- <a class="school__navigation__menu" href="#nav" data-scroll>☰ Menu</a> --}}</li>
         <li><a href="/undergrad/student-life/" class="">Student Life</a></li>
         <li><a href="/undergrad/campus-ministries/" class="">Campus Ministries</a></li>
     </ul>
