--- a/src/templates/partials/site__navigation.hbs
+++ b/src/templates/partials/site__navigation.hbs
@@ -1,6 +1,6 @@
 <div class="site__navigation" id="siteNav">
     <a class="btn  btn-yellow  close-btn" id="nav-close-btn" href="#top">x Close</a>
-    {{!-- <h2 class="block-title">Chapters</h2> --}}
+    {{!-- <h2 class="block-title">In This Section</h2> --}}
 
     <ul class="accordion-list  accordion-list--open  first-level  margins-off">
         <li class="accordion-list__item"><button class="accordion-list__button" href="#"> </button> <a class="accordion-list__link" href="index.php">Art &amp; Design Home</a> </li>
